# bsshslmmodule

./: .readthedocs.yaml  CMakeLists.txt  README.rst
docs/: conf.py  index.rst
examples/: eprop_supervised_classification_evidence-accumulation_bsshslm_2020.py  eprop_supervised_regression_handwriting_bsshslm_2020.py  eprop_supervised_regression_lemniscate_bsshslm_2020.py  eprop_supervised_regression_sine-waves_bsshslm_2020.py
src/: CMakeLists.txt  bsshslmmodule.cpp  eprop_iaf_adapt_bsshslm_2020.cpp  eprop_iaf_adapt_bsshslm_2020.h  eprop_iaf_bsshslm_2020.cpp  eprop_iaf_bsshslm_2020.h  eprop_learning_signal_connection_bsshslm_2020.cpp  eprop_learning_signal_connection_bsshslm_2020.h  eprop_readout_bsshslm_2020.cpp  eprop_readout_bsshslm_2020.h  eprop_synapse_bsshslm_2020.cpp  eprop_synapse_bsshslm_2020.h
